feat: улучшена работа с внешними API
- добавлено логирование через кастомный логгер
- вынесены URL внешних API (Agify, Genderize, Nationalize) в .env
- исправлены ошибки при парсинге и обработке ответов от API
