# handlers/personHandler.go
@@ -2,14 +2,16 @@ package handlers
 
 import (
 	"errors"
-	"log"
 	"net/http"
 	"person-project/db"
+	"person-project/dto"
+	"person-project/logger"
 	"person-project/models"
 	"person-project/services"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"gorm.io/gorm"
 )
 
@@ -19,19 +21,25 @@ import (
 // @Tags person
 // @Accept json
 // @Produce json
-// @Param person body models.CreatePersonRequest true "Данные нового человека (имя и фамилия обязательны)"
+// @Param person body dto.CreatePersonRequest true "Данные нового человека (имя и фамилия обязательны)"
 // @Success 201 {object} models.Person "Пользователь успешно создан"
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
 // @Router /people [post]
 func CreatePerson(c *gin.Context) {
-	var personRequest models.Person
+
+	var personRequest dto.CreatePersonRequest
 	err := c.ShouldBindJSON(&personRequest)
 	if err != nil {
+		logger.Log.Error("Ошибка парсинга JSON",
+			"error", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	log.Printf("Обогащение данных для имени %s", personRequest.Name)
+
+	logger.Log.Debug("Создание пользователя",
+		"name", personRequest.Name,
+		"surname", personRequest.Surname)
 	var person models.Person
 	person.Name = personRequest.Name
 	person.Surname = personRequest.Surname
@@ -39,11 +47,14 @@ func CreatePerson(c *gin.Context) {
 	person.Age = services.GetAge(person.Name)
 	person.Gender = services.GetGender(person.Name)
 	person.Nationality = services.GetNationality(person.Name)
-
+	logger.Log.Debug("Сохранение пользователя в бд",
+		"name", person.Name,
+		"id", person.ID)
 	if err := db.DB.Create(&person).Error; err != nil {
+		logger.Log.Error("Ошибка сохранения в БД", "error", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка сохранения данных" + err.Error()})
 	}
-	log.Printf("Человек %s успешно создан с обогащенными данными", person.Name)
+	logger.Log.Info("Пользователь успешно создан", "id", person.ID)
 	c.JSON(http.StatusCreated, person)
 
 }
@@ -54,28 +65,46 @@ func CreatePerson(c *gin.Context) {
 // @Tags person
 // @Produce json
 // @Param id path int true "ID пользователя"
-// @Success 200 {object} models.ErrorResponse
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
+// @Success 200 {object} models.Person "Успешное удаление пользователя"
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
 // @Router /people/{id} [delete]
 func DeletePerson(c *gin.Context) {
 	var person models.Person
 	strId := c.Param("id")
+	logger.Log.Debug("Попытка удаления пользователя",
+		"id", strId)
 	id, err := strconv.Atoi(strId)
 	if err != nil {
+		logger.Log.Error("Ошибка,недействительный ID",
+			"id", id,
+			"error", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Недействительный ID"})
+		return
 	}
+
 	if err := db.DB.First(&person, id).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
+			logger.Log.Warn("Пользователь не найден",
+				"id", id)
 			c.JSON(http.StatusNotFound, gin.H{"error": "Пользователь не найден"})
-			return
+
 		}
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-	}
-	if err := db.DB.Delete(&person).Error; err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
+	logger.Log.Debug("Удаления пользователя",
+		"id", person.ID,
+		"name", person.Name)
+
+	if err := db.DB.Delete(&person).Error; err != nil {
+		logger.Log.Error("Ошибка при удалении пользователя",
+			"error", err,
+			"id", person.ID)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	logger.Log.Info("Пользователь успешно удалён")
 	c.JSON(http.StatusOK, gin.H{"message": "Пользователь успешно удалён"})
 
 }
@@ -86,53 +115,74 @@ func DeletePerson(c *gin.Context) {
 // @Tags person
 // @Accept json
 // @Param id path string true "ID пользователя"
-// @Param input body models.Person false "Данные для обновления"
+// @Param input body dto.UpdatePersonRequest false "Данные для обновления"
 // @Produce json
 // @Success 200 {object} models.Person "Обновленные данные пользователя"
-// @Failrue 404 {object} models.ErrorResponse
-// @Failrue 500 {object} models.ErrorResponse
-// @Router /people/{id} [put]
+// @Failrue 404 {object} dto.ErrorResponse
+// @Failrue 500 {object} dto.ErrorResponse
+// @Router /people/{id} [patch]
 func UpdatePerson(c *gin.Context) {
 	id := c.Param("id")
 	var person models.Person
+	logger.Log.Debug("Попытка обновления данных пользователя", "id", id)
 	if err := db.DB.First(&person, id).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
+			logger.Log.Error("Пользователь не найден", "id", id)
 			c.JSON(http.StatusNotFound, gin.H{"error": "Пользователь не найден"})
 			return
 		}
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	var updateDataPerson models.Person
+	var updateDataPerson dto.UpdatePersonRequest
+
 	err := c.ShouldBindJSON(&updateDataPerson)
 	if err != nil {
+		logger.Log.Error("Ошибка парсинга обновленных данных JSON",
+			"error", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if updateDataPerson.Name != "" {
-		person.Name = updateDataPerson.Name
+	logger.Log.Debug("Валидация данных",
+		"person", person)
+	validate := validator.New()
+	if err := validate.Struct(updateDataPerson); err != nil {
+		logger.Log.Error("Ошибка валидации",
+			"error", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	if updateDataPerson.Name != nil {
+		person.Name = *updateDataPerson.Name
 
 	}
-	if updateDataPerson.Age != 0 {
-		person.Age = updateDataPerson.Age
+	if updateDataPerson.Age != nil {
+		person.Age = *updateDataPerson.Age
 
 	}
-	if updateDataPerson.Gender != "" {
-		person.Gender = updateDataPerson.Gender
+	if updateDataPerson.Gender != nil {
+		person.Gender = models.Gender(*updateDataPerson.Gender)
 	}
-	if updateDataPerson.Nationality != "" {
-		person.Nationality = updateDataPerson.Nationality
+	if updateDataPerson.Nationality != nil {
+		person.Nationality = *updateDataPerson.Nationality
 	}
-	if updateDataPerson.Surname != "" {
-		person.Surname = updateDataPerson.Surname
+	if updateDataPerson.Surname != nil {
+		person.Surname = *updateDataPerson.Surname
 	}
 	if updateDataPerson.Patronymic != nil && *updateDataPerson.Patronymic != "" {
 		person.Patronymic = updateDataPerson.Patronymic
 	}
 	if err := db.DB.Save(&person).Error; err != nil {
+		logger.Log.Error("Ошибка при обновлении данных пользователя",
+			"name", person.Name,
+			"id", person.ID,
+			"error", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при обновлении"})
 		return
 	}
+	logger.Log.Info("Данные пользователя успешно обновлены",
+		"id", person.ID,
+		"name", person.Name)
 	c.JSON(http.StatusOK, person)
 
 }
@@ -150,14 +200,14 @@ func UpdatePerson(c *gin.Context) {
 // @Param age_max query integer false "Максимальный возраст (включительно)"
 // @Param limit query integer false "Лимит записей (по умолчанию 10)"
 // @Param offset query integer false "Смещение (по умолчанию 0)"
-// @Success 200  {array} models.Person "Cписок людей"
-// @Failrue 500 {object} models.ErrorResponse "Ошибка сервера"
+// @Success 200  {array} models.Person "Cписок пользователей"
+// @Failrue 500 {object} dto.ErrorResponse "Ошибка сервера"
 // @Router /people [get]
 func GetPersons(c *gin.Context) {
 
 	var persons []models.Person
 	db := db.DB.Model(&models.Person{})
-
+	logger.Log.Debug("Попытка вывода пользователей по фильтрам")
 	if name := c.Query("name"); name != "" {
 		db = db.Where("name ILIKE ?", "%"+name+"%")
 	}
@@ -182,12 +232,15 @@ func GetPersons(c *gin.Context) {
 
 	limit, _ := strconv.Atoi(strLimit)
 	offset, _ := strconv.Atoi(strOffset)
-
+	logger.Log.Debug("Попытка выполнения запроса в БД")
 	if err := db.Limit(limit).Offset(offset).Find(&persons).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при получении людей", "details": err.Error()})
+		logger.Log.Error("Ошибка при попытке выполнения запроса",
+			"error", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при получении пользователей", "details": err.Error()})
 		return
 	}
-
+	logger.Log.Info("Выполнение запроса прошло успешно",
+		"persons", persons)
 	c.JSON(http.StatusOK, persons)
 }
 
@@ -197,23 +250,32 @@ func GetPersons(c *gin.Context) {
 // @Tags person
 // @Produce json
 // @Param id path string true "ID пользователя"
-// @Success 200 {object} models.Person"Данные о пользователе"
-// @Failrue 404 models.ErrorResponse "Пользователь не найден"
+// @Success 200 {object} models.Person "Данные о пользователе"
+// @Failrue 404 dto.ErrorResponse "Пользователь не найден"
 // @Router /people/{id} [get]
 func GetPersonByID(c *gin.Context) {
-
+	logger.Log.Debug("Попытка вывода Пользователя по id")
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
+		logger.Log.Error("Неверный формат id",
+			"id", id)
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Требуется id"})
 	}
 	var person models.Person
+	logger.Log.Debug("Поиск пользователя в бд",
+		"id", id)
 	if err := db.DB.First(&person, id).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
+			logger.Log.Error("Пользователь не найден",
+				"id", id)
 			c.JSON(http.StatusNotFound, gin.H{"error": "Пользователь не найден"})
 		}
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
+	logger.Log.Info("Пользователь успешно найден",
+		"id", id,
+		"name", person.Name)
 	c.JSON(http.StatusOK, person)
 
 }
