# models/person.go
@@ -4,20 +4,21 @@ import (
 	"time"
 )
 
+type Gender string
+
+const (
+	GenderMale   string = "male"
+	GenderFemale string = "female"
+)
+
 type Person struct {
 	ID          uint      `json:"id" gorm:"primaryKey"`
-	CreatedAt   time.Time `json:"created_at"`
+	CreatedAt   time.Time `json:"created_at" gorm:"index"`
 	UpdatedAt   time.Time `json:"updated_at"`
-	Name        string    `json:"name" binding:"required"`
-	Surname     string    `json:"surname" binding:"required"`
+	Name        string    `json:"name" binding:"required" gorm:"index"`
+	Surname     string    `json:"surname" binding:"required" gorm:"index"`
 	Patronymic  *string   `json:"patronymic,omitempty"`
-	Age         int       `json:"age"`
-	Gender      string    `json:"gender"`
+	Age         int       `json:"age" gorm:"index"`
+	Gender      Gender    `json:"gender" validate:"oneof=male female" gorm:"index"`
 	Nationality string    `json:"nationality"`
-}
-
-type CreatePersonRequest struct {
-	Name       string  `json:"name" example:"Ivan"`
-	Surname    string  `json:"surname" example:"Ivanov"`
-	Patronymic *string `json:"patronymic" example:"Ivanovich"`
 }
